# SGF-Auditor

./: .gitignore  2ipk-gokifu-20160309-AlphaGo-Lee_Sedol.sgf  SGFAuditor.js  alGOrithm-code-1784307167153.sgf  compliance.html  foxwq-sgf.js  gnugo.js  gnugo_wrapper.js  index.html  package.json  sgf-ff4-compliance.js  sgf_auditor.js  sgf_parser.js  sgfc.js  sgfc.wasm  sgfc.wasm.js  sgfc_worker.js  tech-log.html  version.js
GNUGO/: compile_wasm.sh  gnugowrapper.c
GNUGO/gnugo-build/: Makefile  config.h  config.status
GNUGO/gnugo-build/doc/: Makefile
GNUGO/gnugo-build/engine/: Makefile
GNUGO/gnugo-build/interface/: Makefile
GNUGO/gnugo-build/patterns/: Makefile  joseki  mkeyes  mkmcpat  mkpat  uncompress_fuseki
GNUGO/gnugo-build/regression/: Makefile
GNUGO/gnugo-build/sgf/: Makefile  sgfgen
GNUGO/gnugo-build/utils/: Makefile
SGFC/: compile_wasm.sh
SGFC/sgfc-2 2.3/: sgfc
SGFC/sgfc-2 2.3/test-files/: reorder-result.sgf  reorder-z-result.sgf
SGFC/sgfc-2.3-bin/: README
SGFC/sgfc-2.3-bin/src/: all.h  error.c  execute.c  load.c  main.c  options.c  parse.c  parse2.c  properties.c  protos.h  sgfc  strict.c
SGFC/sgfc-2.3-bin/test-files/: escaping-result.sgf  mixed-encoding-result.sgf
SGFC/sgfc-2.3-bin/tests/: Makefile  check-options.c  check-value.c  delete-node.c  gameinfo-correction.c  gameinfo-interactive.c  input-size.c  load-properties.c  nesting.c  position.c  test-common.h  value-length.c
SGFC/sgfc-main/: .clang-tidy  .gitignore  CMakeLists.txt  COPYING  Makefile  README
SGFC/sgfc-main/src/: Makefile  encoding.c  gameinfo.c  helpers.h  load.c  options.c  save.c  util.c
SGFC/sgfc-main/test-files/: README  strict-result.sgf  test-result.sgf  test-roun-result.sgf
SGFC/sgfc-main/tests/: README  check-encoding.c  check-options.c  other-games.c  parse-move.c  parse-text.c  saving.c  test-files.c  test-helper.c  test-runner.c  trigger-errors.c
flat-ui-guide/: .$DiagnosticsDiagram.drawio.bkp  .$WorkFlowDiagram.drawio.bkp  DiagnosticsDiagram.drawio  WorkFlowDiagram.drawio
red-bean/: SKILL.md  index.html
red-bean/red-bean.com/sgf/: DD_VW.html  amazons.html  backgammon.html  changes.html  compatibility.html  converting.html  gess.html  go.html  hex.html  history.html  index-2.html  index.html  loa.html  main.css  octi.html  properties.html  proplist.html  proplist_ff.html  proplist_t.html  sgf4.html  twixt.html  (+1 more)
red-bean/sgf-spec/: book.md  book.tex  sgf-spec.html
worker/: index.js  wrangler.toml
(+235 files in other folders)
